Slides Model Updated

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Port number
-PORT=3000
+PORT=8000
 
 # URL of the Mongo DB
-MONGODB_URL=mongodb+srv://techsavvy:macbook@cluster0.pahku.mongodb.net/taxunt?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://techsavvy:macbook@cluster0.pahku.mongodb.net/MAKEITSIMPLE?retryWrites=true&w=majority
 
 # JWT
 # JWT secret key
